# Linux-learn

./: .gitignore
NormalTest/: Makefile  test.cpp
chatroom/: Main  Makefile  client.hpp  main.cpp  server.hpp  task.hpp  test.cc  threadpool.hpp
lesson/: Makefile  a.txt  file  test  test.cpp
lesson01-基础IO/: Makefile  test  test.cpp
lesson02-动静态库/: Makefile  add.cpp  test  test.cpp
lesson03-进程通信/Blockqueue/: Blockqueue.hpp  Main  Main.cpp  Makefile  Task.hpp  log.txt
lesson03-进程通信/Mypipe/: Makefile  mypipe.cpp
lesson03-进程通信/Mythread/: Makefile  mythread  mythread.cpp
lesson03-进程通信/Thread/: Makefile  Thread.hpp  main  main.cpp  mythread  ticket  tickets.cpp
lesson03-进程通信/mysignal/: Makefile  Mysignal  mysignal.cpp  test.cpp
lesson03-进程通信/named_pipe/: Makefile  client  client.cpp  comm.hpp  server  server.cpp
lesson03-进程通信/namedpipe/: Makefile  client.cpp  myclient  myserver  server.cpp
lesson03-进程通信/shm/: Makefile  cilent  comm.hpp  server  shm_cilent.cpp  shm_server.cpp
lesson03-进程通信/testCmake/: CMakeLists.txt
lesson03-进程通信/testCmake/include/: message01.h  message02.h
lesson03-进程通信/testCmake/src/: main.cpp  message01.cpp  message02.cpp
lesson03-进程通信/testMakefile/: Makefile  main.cpp  message.cpp  message.h
lesson03-进程通信/test_cond/: Makefile  cond  testCond.cpp
lesson04-多线程/BlockQueue/: Blockqueue.hpp  Main  Main.cpp
lesson04-多线程/CircleQueue/: Circlequeue.hpp  Main  Main.cpp  Makefile
lesson04-多线程/ThreadPool-std/: LockGuard.hpp  Makefile  Task.hpp  Thread.hpp  ThreadPool.hpp  (+2 more)
linux/: Main  Makefile  client.hpp  server.hpp  test.cpp
(+79 files in other folders)
